--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,9 +3,10 @@
     <%= link_to t("my_app.name"), root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t("home"), root_path %></li>
-        <li><%= link_to t("help"), help_path %></li>
-        <li><%= link_to t("about"), about_path %></li>        
+        <li><%= link_to t("_home"), root_path %></li>
+        <li><%= link_to t("_help"), help_path %></li>
+        <li><%= link_to t("_about"), about_path %></li>
+        <li><%= link_to t("_users"), users_path %></li>        
       </ul>
     </nav>
   </div>
