--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,24 @@
         <li><%= link_to t("_home"), root_path %></li>
         <li><%= link_to t("_help"), help_path %></li>
         <li><%= link_to t("_about"), about_path %></li>
-        <li><%= link_to t("_users"), users_path %></li>        
+        <li><%= link_to t("_users"), users_path %></li> 
+        <% if logged_in? %>          
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t "account" %> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t("_profile"), current_user %></li>
+              <li><%= link_to t("_setting"), edit_user_path(current_user) %></li>             
+              <li class="divider"></li>
+              <li>
+                <%= link_to t("_logout"), logout_path, method: "delete" %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t("_login"), login_path %></li>
+        <% end %>       
       </ul>
     </nav>
   </div>
