User view lesson

--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -3,4 +3,5 @@
   <span class="title"><%= t "you_have_learned" %></span>
   <span class="progress"><%= category.number_of_words_in_lesson %></span>   
   <p class="description"><%= category.description %></p> 
+  <%= button_to t("_start"), category_lessons_path(category), class: "btn btn-primary" %>  
 </li>
