--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,8 @@
         <li><%= link_to t("_about"), about_path %></li>        
         <% if logged_in? %>
           <li><%= link_to t("_users"), users_path %></li>
-          <li><%= link_to t("_categories"), categories_path %></li>           
+          <li><%= link_to t("_categories"), categories_path %></li>   
+          <li><%= link_to t("_words"), words_path %></li>          
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t "account" %> <b class="caret"></b>
