--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,12 +7,17 @@
         <li><%= link_to t("_help"), help_path %></li>
         <li><%= link_to t("_about"), about_path %></li>        
         <% if logged_in? %>
-          <li><%= link_to t("_users"), users_path %></li>
-          <li><%= link_to t("_categories"), categories_path %></li>   
-          <li><%= link_to t("_words"), words_path %></li>          
+          <% if current_user.is_admin? %>
+            <li><%= link_to t("_users"), admin_users_path %></li>
+            <li><%= link_to t("_categories"), admin_categories_path %></li>   
+          <% else %>      
+            <li><%= link_to t("_users"), users_path %></li>
+            <li><%= link_to t("_categories"), categories_path %></li>   
+            <li><%= link_to t("_words"), words_path %></li>  
+          <% end %>     
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <%= t "account" %> <b class="caret"></b>
+              <%= current_user.email %> <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to t("_profile"), current_user %></li>
